unpackaged/main/default/objects/ConsumerCreditSummaryMark__c/ConsumerCreditSummaryMark__c.object-meta.xml
<CustomObject>
    <label>ConsumerCreditSummaryMark</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>ConsumerCreditSummaryMark Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ConsumerCreditSummaryMark</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>