unpackaged/main/default/objects/ConsumerCreditSummaryMark__c/fields/Consumer_Credit_Summary__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Credit_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumer Credit Summary</label>
    <referenceTo>Consumer_Credit_Summary__c</referenceTo>
    <relationshipLabel>ConsumerCreditSummaryMark</relationshipLabel>
    <relationshipName>ConsumerCreditSummaryMark</relationshipName>
    <type>Lookup</type>
</CustomField>