unpackaged/main/default/objects/ConsumerCreditSummaryMark__c/fields/Importance__c.field-meta.xml
<CustomField>
    <fullName>Importance__c</fullName>
    <description>Importance ranking of the returned credit factor.</description>
    <label>Importance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>